# pokemon-rust-sdk

./: .gitignore  Cargo.toml  README.md
examples/: fetch_pokemon_advanced.rs  fetch_pokemon_basic.rs  fetching_invalid_pokemon.rs
src/: api_error.rs  core_client.rs  lib.rs  pokemon_sdk.rs  retry_policy_mod.rs
src/games_api/: api.rs  model.rs
src/pokemon_api/: api.rs  model.rs
tests/integration_tests/: integration_test.rs
